# compare

./: .gitignore
gst-nvinfer/: CMakeLists.txt  gstnvinfer.cpp  gstnvinfer.h  gstnvinfer_allocator.cpp  gstnvinfer_allocator.h  gstnvinfer_impl.cpp  gstnvinfer_impl.h  gstnvinfer_meta_utils.cpp  gstnvinfer_meta_utils.h  gstnvinfer_property_parser.cpp  gstnvinfer_property_parser.h
nvdsinfer/: CMakeLists.txt  Makefile  nvdsinfer_backend.cpp  nvdsinfer_backend.h  nvdsinfer_context_impl.cpp  nvdsinfer_context_impl.h  nvdsinfer_context_impl_capi.cpp  nvdsinfer_context_impl_output_parsing.cpp  nvdsinfer_conversion.h  nvdsinfer_func_utils.cpp  nvdsinfer_func_utils.h  nvdsinfer_model_builder.cpp  nvdsinfer_model_builder.h
